#2: search table and store favorites

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,1 @@
-<!-- <pre>
-  app-home
-</pre> -->
-<app-search-bar></app-search-bar>
+<app-search (optionSelected)="filterResult($event)"></app-search>
