--- a/src/app/shared/components/search-bar/search.component.html
+++ b/src/app/shared/components/search-bar/search.component.html
@@ -31,19 +31,17 @@
       <th mat-header-cell *matHeaderCellDef>Favorite</th>
       <td mat-cell *matCellDef="let element">
         <mat-icon
-          fontIcon="star_outline"
-          *ngIf="!isInFavorites(element)"
-          (click)="updateFavorites(element)"
-        ></mat-icon>
-        <mat-icon
-          fontIcon="star"
-          *ngIf="isInFavorites(element)"
-          (click)="updateFavorites(element)"
+          [fontIcon]="isInFavorites(element) ? 'star' : 'star_outline'"
+          (click)="updateFavorites(element); $event.stopPropagation()"
         ></mat-icon>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+      (click)="onOptionSelected(row)"
+    ></tr>
   </table>
 </div>
