#4: Favorites List - Improve performance

--- a/src/app/home/components/favorites/favorites.component.html
+++ b/src/app/home/components/favorites/favorites.component.html
@@ -7,6 +7,7 @@
       *ngFor="let stock of favoritesLatestPrice"
       [stock]="stock"
       (removeStock)="removeStock($event)"
+      (directToDetails)="goToDetails(stock)"
     ></app-favorites-card>
   </div>
 </div>
