--- a/src/app/home/components/favorites/favorites-card/favorites-card.component.html
+++ b/src/app/home/components/favorites/favorites-card/favorites-card.component.html
@@ -1,10 +1,13 @@
 <div class="card-container">
-  <div>[{{ stock.symbol }}]</div>
-  <div>{{ stock.price }}</div>
-  <div>{{ stock.name }}</div>
-  <div>{{ stock.percentChange }}</div>
-  <div>{{ stock.date }}</div>
-  <button mat-button (click)="removeCard(stock)">
-    <mat-icon>remove_circle_outline</mat-icon>
-  </button>
+  <div class="card-wrapper">
+    <div>[{{ stock.symbol }}]</div>
+    <div>${{ stock.price ?? "--.--" }}</div>
+    <div>{{ stock.name }}</div>
+    <div>{{ stock.percentChange ?? "--.--%" }}</div>
+    <div>{{ stock.date ?? "MM/DD/YYYY" }}</div>
+    <button mat-button (click)="removeCard(stock)">
+      <mat-icon>remove_circle_outline</mat-icon>
+    </button>
+    <button mat-button (click)="goToDetails()">See more details</button>
+  </div>
 </div>
