--- a/src/app/home/components/favorites/favorites.component.scss
+++ b/src/app/home/components/favorites/favorites.component.scss
@@ -1,3 +1,5 @@
-.favorites-container {
-    // width: 66%
+.favorites-card-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); // ✨ responsive!
+    gap: 12px;
 }
