--- a/src/app/shared/components/search-bar/search.component.scss
+++ b/src/app/shared/components/search-bar/search.component.scss
@@ -1,5 +1,5 @@
 .search {
-  // width: 33%;
+  padding: 12px;
 }
 
 .search-bar {
@@ -8,6 +8,9 @@
 
 .search-results-table {
   width: 100%;
+  height: 85vh;
+  max-height: 85vh;
+  overflow-y: auto;
 
   .mat-column-symbol {
     width: 25%;
