--- a/src/app/home/components/favorites/favorites.component.scss
+++ b/src/app/home/components/favorites/favorites.component.scss
@@ -1,5 +1,10 @@
 .favorites-card-wrapper {
+    margin: 12px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); // ✨ responsive!
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 12px;
+
+    @media (max-width: 768px) {
+        margin-bottom: 50vh;
+    }
 }
