--- a/src/app/shared/components/search-bar/search.component.html
+++ b/src/app/shared/components/search-bar/search.component.html
@@ -1,10 +1,10 @@
-<div class="search">
+<div class="search" [ngClass]="{ 'favorites-drawer-open': this._drawerOpen }">
   <mat-form-field class="search-bar">
     <mat-label>Search</mat-label>
     <input
       matInput
       type="text"
-      placeholder="enter ticker or company name"
+      placeholder="Search by company name or ticker symbol"
       [formControl]="searchControl"
     />
     <button matSuffix matIconButton aria-label="Clear" (click)="reset()">
@@ -12,36 +12,47 @@
     </button>
   </mat-form-field>
 
-  <table
-    mat-table
-    [dataSource]="this.searchResults"
-    class="search-results-table"
-  >
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">[{{ element.symbol }}]</td>
-    </ng-container>
+  <div *ngIf="noSearchResults && this.searchControl.value" class="empty-state">
+    <div class="empty-text">
+      <h3 class="empty-text-primary">No results found</h3>
+      <p class="empty-text-secondary">
+        Try a different company name or ticker symbol.
+      </p>
+    </div>
+  </div>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
+  <div class="search-results-table-wrapper search-results-table">
+    <table
+      *ngIf="searchResults.length && this.searchControl.value"
+      mat-table
+      [dataSource]="this.searchResults"
+    >
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef>Symbol</th>
+        <td mat-cell *matCellDef="let element">[{{ element.symbol }}]</td>
+      </ng-container>
 
-    <ng-container matColumnDef="favorite">
-      <th mat-header-cell *matHeaderCellDef>Favorite</th>
-      <td mat-cell *matCellDef="let element">
-        <mat-icon
-          [fontIcon]="isInFavorites(element) ? 'star' : 'star_outline'"
-          (click)="updateFavorites(element); $event.stopPropagation()"
-        ></mat-icon>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: displayedColumns"
-      (click)="onOptionSelected(row)"
-    ></tr>
-  </table>
+      <ng-container matColumnDef="favorite">
+        <th mat-header-cell *matHeaderCellDef>Favorite</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-icon
+            [fontIcon]="isInFavorites(element) ? 'star' : 'star_outline'"
+            (click)="updateFavorites(element); $event.stopPropagation()"
+          ></mat-icon>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        (click)="onOptionSelected(row)"
+      ></tr>
+    </table>
+  </div>
 </div>
