Stock Details - Routing Set up

--- a/src/app/home/components/favorites/favorites-card/favorites-card.component.html
+++ b/src/app/home/components/favorites/favorites-card/favorites-card.component.html
@@ -3,7 +3,7 @@
   (click)="goToDetails()"
   [class.disabled]="!stockDataAvailable"
 >
-  <mat-card class="stock-card">
+  <mat-card class="stock-card hover">
     <mat-card-content
       class="card-content"
       matTooltip="See more details for [{{ stock.symbol }}]"
