Stock Details - Display details

--- a/src/app/home/components/favorites/favorites-card/favorites-card.component.html
+++ b/src/app/home/components/favorites/favorites-card/favorites-card.component.html
@@ -41,7 +41,7 @@
       <div class="date-info">
         <div class="label">
           <i
-            >Details based on
+            >Details as of
             {{ !stock.date ? "MM.DD.YYYY" : formatDate(stock.date) }}</i
           >
         </div>
